exports[`cancelStopRequest reducer handles RESET_STATE action 1`] = `
Object {
  "isCancellingDestinationStopRequest": false,
  "isCancellingFromStopRequest": false,
  "stopRequestDestinationCancellationError": null,
  "stopRequestDestinationCancelled": false,
  "stopRequestFromCancellationError": null,
  "stopRequestFromCancelled": false,
}
`;

exports[`cancelStopRequest reducer handles SEND_STOPREQUEST_CANCELLATION action 1`] = `
Object {
  "isCancellingDestinationStopRequest": false,
  "isCancellingFromStopRequest": false,
  "stopRequestDestinationCancellationError": null,
  "stopRequestDestinationCancelled": false,
  "stopRequestFromCancellationError": null,
  "stopRequestFromCancelled": false,
}
`;

exports[`cancelStopRequest reducer handles STOPREQUEST_CANCELLATION_ERROR action 1`] = `
Object {
  "isCancellingDestinationStopRequest": false,
  "isCancellingFromStopRequest": false,
  "stopRequestDestinationCancellationError": null,
  "stopRequestDestinationCancelled": false,
  "stopRequestFromCancellationError": undefined,
  "stopRequestFromCancelled": false,
}
`;

exports[`cancelStopRequest reducer handles STOPREQUEST_CANCELLED action 1`] = `
Object {
  "isCancellingDestinationStopRequest": false,
  "isCancellingFromStopRequest": false,
  "stopRequestDestinationCancellationError": null,
  "stopRequestDestinationCancelled": true,
  "stopRequestFromCancellationError": null,
  "stopRequestFromCancelled": false,
}
`;

exports[`cancelStopRequest reducer returns the same state on an unhandled action 1`] = `
Object {
  "isCancellingDestinationStopRequest": false,
  "isCancellingFromStopRequest": false,
  "stopRequestDestinationCancellationError": null,
  "stopRequestDestinationCancelled": false,
  "stopRequestFromCancellationError": null,
  "stopRequestFromCancelled": false,
}
`;
